fix r-query retry and delay and scrollbar stlye

--- a/src/index.css
+++ b/src/index.css
@@ -11,47 +11,43 @@ body {
         sans-serif;
 }
 /* ************************************ Scrollbar******/
-/* Firefox */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: #febd14 #dfe9eb;
+/* ---------- for scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
 }
-
-/* Chrome, Edge and Safari */
-*::-webkit-scrollbar {
-    height: 4px;
-    width: 4px;
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #fe9c08;
+    border-radius: 2px;
 }
-*::-webkit-scrollbar-track {
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #e27c09;
+}
+/* Handle on active */
+::-webkit-scrollbar-thumb:active {
+    background-color: #ff8c0a;
+}
+/* Track */
+::-webkit-scrollbar-track {
     background-color: #dfe9eb;
 }
 
-*::-webkit-scrollbar-track:hover {
+::-webkit-scrollbar-track:hover {
     background-color: #b8c0c2;
 }
 
-*::-webkit-scrollbar-track:active {
+::-webkit-scrollbar-track:active {
     background-color: #b8c0c2;
 }
-
-*::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: #fe9c08;
+/* Resizer */
+::-webkit-resizer {
+    background: #111; 
 }
 
-*::-webkit-scrollbar-thumb:hover {
-    background-color: #e27c09;
-}
-
-*::-webkit-scrollbar-thumb:active {
-    background-color: #ff8c0a;
-}
-
-@media (max-width: 800px) {
-    *::-webkit-scrollbar {
-        width: 4px;
-        height: 4px;
-    }
+.thin-scroll-thumb::-webkit-scrollbar {
+   width: 4px; 
 }
 /* ************************************ Scrollbar******/
 
